# hexgrid-3d

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  MIGRATION_SUMMARY.md  PACKAGE_INFO.md  README.md  build_log.txt  build_src_log.txt  bunfig.toml  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/src/: features.ts.html  index.html
examples/: basic-usage.tsx
public/: hexgrid-worker.js
rust/: Cargo.toml
rust/src/: lib.rs  math.rs  spatial.rs  statistics.rs
scripts/: build-shaders.ts
site/: package.json
src/: HexGridEnhanced.ts  Snapshot.ts  adapters.ts  compat.ts  features.ts  index.ts  note-adapter.ts  ontology-adapter.ts  types.ts
src/adapters/: DashAdapter.ts
src/algorithms/: AdvancedStatistics.ts  BayesianStatistics.ts  FlowField.ts  FlowField3D.ts  FluidSimulation.ts  FluidSimulation3D.ts  FluidSimulation3DGPU.ts  FluidSimulationWebNN.ts  GraphAlgorithms.ts  OutlierDetection.ts  ParticleSystem.ts  ParticleSystem3D.ts  index.ts
src/components/: GamePieceRenderer.ts  GameSphere.tsx  HexGrid.tsx  NarrationOverlay.tsx  index.ts
src/lib/: narration.ts  stats-tracker.ts  theme-colors.ts
src/math/: HexCoordinates.ts  Matrix4.ts  Quaternion.ts  SpatialIndex.ts  Vector3.ts  index.ts
src/stores/: index.ts  uiStore.ts
src/territory/: HexTerritoryGlobe.tsx  globe.ts  index.ts  narration.ts
src/types/: index.ts  shared-utils.d.ts
src/utils/: image-utils.ts
src/wasm/: HexGridWasmWrapper.ts  (+1 more)
tests/: setup.ts
(+56 files in other folders)
